# WireStudio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pcb  LICENSE  Makefile  README.md  START.md  index.html  my_diff.patch  pyproject.toml  style.css
.jules/: bolt.md
deploy/: README.md  k8s.yaml  kustomization.yaml
docs/: MCP.md  deployment.md  index.md  integrations.md  intent-to-device.md  library-coverage.md  library.md  mcp.md  user_guide.md
examples/: awning-control.json  esp32-audio.json
schema/: design.schema.json
scripts/: build_lorawan_firmware.py  check_enclosures.py  check_examples.py  check_footprints.py  check_pcb.py  check_pcb_drc.py  check_pcb_route.py  check_schematics.py  chirpstack_provision_smoke.py  coverage_baseline.yaml  coverage_matrix.py
studio/: __init__.py  library.py  model.py
tests/: conftest.py  test_active_design.py  test_agent.py  test_agent_stream.py  test_api.py  test_api_route.py  test_ascii_gen.py  test_build_backend.py  test_chirpstack.py  test_codec.py  test_compatibility.py  test_compile.py  test_coverage_baseline.py  test_designs.py  test_designs_seed.py  test_enclosure.py  test_enclosure_gate.py  test_firmware_gen.py  test_fleet.py  test_footprints.py  test_intent.py  test_inventory.py  test_kicad.py  test_kicad_fab.py  test_kicad_import.py  test_kicad_pcb.py  test_kicad_render.py  test_kicad_route.py  test_library_rtttl.py  test_lorawan.py  test_lorawan_api.py  test_mcp_auth.py  test_mcp_server.py  test_modules.py  test_pin_solver.py  test_recommend.py  test_schema.py  test_schematics_gate.py  test_security_cors.py  test_seed_onboard.py  (+6 more)
web/: README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+274 files in other folders)
